...
        app:cardElevation="4dp"
        app:layout_constraintEnd_toStartOf="@+id/addArtistButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/artistsTitle">

        <EditText
            android:id="@+id/searchEditTextArtists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableStart="@android:drawable/ic_menu_search"
            android:drawablePadding="8dp"
            android:hint="Buscar artistas..."
...
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="@id/searchBarContainerArtists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/searchBarContainerArtists" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/artistsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
...
